# rocket-quote-fzia64

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  infrastructure-ci.yml  release.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/scripts/: apply-terraform.sh  backup-databases.sh  destroy-terraform.sh  init-terraform.sh  restore-databases.sh  rotate-keys.sh
infrastructure/terraform/aws/: backend.tf  ecr.tf  eks.tf  elasticache.tf  iam.tf  kms.tf  main.tf  mongodb.tf  networking.tf  outputs.tf  rds.tf  route53.tf  s3.tf  variables.tf  waf.tf
src/backend/: .dockerignore  .env.example  .eslintrc.json  .prettierrc  Dockerfile  README.md  docker-compose.yml  jest.config.ts  lerna.json  nodemon.json  package.json  tsconfig.json
src/backend/services/ml-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
src/backend/services/ml-service/src/config/: model_config.py
src/backend/services/ml-service/src/models/: lead_scorer.py
src/backend/services/ml-service/src/routes/: scoring_routes.py
src/backend/services/ml-service/src/services/: scoring_service.py
src/backend/services/ml-service/src/utils/: feature_engineering.py
src/backend/services/ml-service/tests/: test_lead_scorer.py
src/web/: .dockerignore  .env.example  .eslintrc.json  README.md  jest.config.ts  lerna.json  package.json  tsconfig.json
(+187 files in other folders)
