[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "insurance-lead-ml-service"
version = "1.0.0"
description = "ML service for real-time lead scoring and dynamic pricing across insurance verticals"
authors = ["Insurance Lead Platform Team"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "0.100.0"
uvicorn = "0.23.0"
scikit-learn = "1.3.0"
pandas = "2.0.3"
numpy = "1.24.3"
pydantic = "2.0.3"
joblib = "1.3.0"
prometheus-client = "0.17.0"
python-json-logger = "2.0.7"
httpx = "0.24.1"
python-dotenv = "1.0.0"
gunicorn = "21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=xml --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "src/**/*.py"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true